Another attempt of fixing the transparent bug on mobile

--- a/resources/scss/3-generic/navigation.sass
+++ b/resources/scss/3-generic/navigation.sass
@@ -80,7 +80,7 @@
     bottom: 0
     left: -1.5rem
     width: 1.5rem
-    background: linear-gradient(to right, rgba(0, 0, 0, 0), $primary)
+    background-image: linear-gradient(to right, transparent, $primary)
     // Specifies that the pseudo-element cannot be a target of mouse events,
     // allowing text behind it to still be selectable/interactive
     pointer-events: none
